@@ -3892,6 +3892,12 @@ password=P@ssW0rd!
                     <td>Yes</td>
                     <td>Local working copy to use when making queries</td>
                 </tr>
+                <tr>
+                    <td>property</td>
+                    <td>No</td>
+                    <td>Set this property if a modification has occurred. For use
+                        in conditionally controlling the build later.</td>
+                </tr>
             </tbody>
         </table>
 
